# assume-role

./: Cargo.toml  README.md
src/: credential_file.rs  main.rs  settings.rs
