[package]
name = "assume-role"
version = "0.2.0"
authors = ["Adam Batkin <adam@batkin.net>"]
edition = "2021"

[dependencies]
anyhow = "1"
structopt = "0.3.14"
aws-config = "0.56"
aws-sdk-sts = "0.29"
aws-smithy-client = { version = "0.56", features = ["client-hyper"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["client"] }
hyper-proxy = "0.9"
directories = "2.0.2"
rust-ini = { version = "0.14.0", features = ["preserve_order"] }
